--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/artpalette.ico">
+  <meta name="description" content="First-year Art (Studio) Major currently attending the University of California, Riverside. Resume profile intended to help and open opportunities for me.">
+  <meta name="author" content="862302376">
 
-  <title>John Doe - Business Administration</title>
+  <title> - Sandra Santos - Entrepreneur Artist</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Sandra Santos</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/sandrasantos.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Sandra Santos
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Art (Studio) 🎨🖌</div>
+        <p class="lead mb-4">I'm a driven college student, looking for an entry-level opportunity in which I can apply and expand my exceptional and on-going creative and artistic skills. Currently, I am a first year Art (Studio) major, attending the University of California, Riverside. I'm working towards my B.A. to hopefully minor in business and open a small art business or art gallery of my own, one day. I'm interested in any job position or internship that can challenge my skills and help me gain more work experience. I'm able to provide a flexible schedule and I am interested in being considered for overtime work. More importantly, I'm eager to learn from others, work with others and grow as an individual.<br><br>
 
-        Enter bio here<br><br>
+        There is a lot that I would love to share about myself. I believe there are many important characteristics that make me qualified. To begin, I am a self-disciplined person. I have the ability to work hard and act professionally independent when it comes down to it. This skill goes hand in hand with being open-minded. As an artist, it is necessary for me to be mentally open to receiving new ideas, advice and critiques given or shared to me. For me, it is important to be able to work around a diverse group of people, who come from different backgrounds and have different mindsets. Being exposed to various groups can help create inspiration for new pieces of artworks and creative ideas. Being open-minded while still remaining firm on my beliefs is an essential skill for an artist.<br><br>
 
-        Enter bio here
+        As a family oriented person, it is also important to have loved ones you deeply care about and who you put at the core of your priorities. This serves as a motivation to try my hardest because I know that my effort isn't in vain and will not go unnoticed. Some additional things I enjoy doing include helping others, finding new ways to expand and challenge my comfort zone. There is a saying that I live by and it goes "maybe I didn't get paid well, but at least I gained some experience from it". It is important to always be aware of what one can gain from any position or opportunity in life. Although I may not have any previous professional experience, I have volunteered at a public library for 1 year and a half and completed more than 100 community service hours. I enjoy doing volunteer work, especially because I have the chance to interact with people of different ages around my community. I have also volunteered multiple times and continue to volunteer at the church I'm attending. Overall, most of my volunteer experiences have helped to strengthen my communication, social and organizational skills. Plus, I was able to put my fluency in another language, Spanish, to use as well. Down below, I have included the rest of my portfolio which shines more focus over my educational and professional experiences. If you have any questions, feel free to contact me. Thank you!
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/sandras_artt/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/ssant094">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/ssandraa_san">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:ssant094@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Library Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://rivlib.net/branch/mead-valley">Mead Valley Library</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Organized books and items on shelves<br> 
+              • Helped patrons with computer assistance<br>
+              • Participated in programs provided for children and families<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2017 - January 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Assistant Coach</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.instagram.com/redzonecamps/">Citrus Hill High School Redzone Camp</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Extremely responsible for supervising kids and coaching<br>
+              • Worked alongside various Varsity Coaches to train and help kids learn basic soccer skills<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Church Volunteer Work</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://sandalschurch.com/locations/hunterpark/">Altar de Oracion Aposento Alto</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Help organize events, meetings, activites and services<br>
+            • Assist leaders and members of the church<br>
+            • Interior Maintainence<br>
+            • Cleaning after service hours and special events<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2014 - Present</span>
           </div>
         </div>
 
@@ -152,33 +152,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Art</div>
+            <div>BA in Art (Studio)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">Sept 2021- Sept 2025</span>
           </div>
         </div>
 
@@ -191,7 +169,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image1.jpg" width="500px">
+            <img src="img/image2.jpg" width="500px"><br>
+            <img src="img/image3.jpg" width="500px">
+            <img src="img/image4.jpg" width="500px"><br>
+            <img src="img/image5.jpg" width="500px">
+            <img src="img/image6.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +182,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Sandra Sandra</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
